# todo-planner

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
todo_planner/: main.py  safe_todoist_api.py
