[tool.poetry]
name = "todo-planner"
version = "0.1.0"
description = ""
authors = ["tumfwkm <tumf@wakumo.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
todoist-api-python = "^2.1.3"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
